fix: Java 11 does not have `toList` for `Stream`